<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margines_main"
        android:paddingLeft="@dimen/margines_main"
        android:paddingRight="@dimen/margines_main"
        android:paddingTop="@dimen/margines_main" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Buttons for Activities-->
            <Button
                android:id="@+id/button_left"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@color/orangeText"
                android:text="@string/main_activity" />

            <Button
                android:id="@+id/button_center"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@color/redLines"
                android:text="@string/favorite" />

            <Button
                android:id="@+id/button_right"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@color/orangeText"
                android:text="@string/all_songs" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>