<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.example.android.musicapp.MainActivity">

    <!--Main image-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/main_picture" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margines_main"
        android:paddingLeft="@dimen/margines_main"
        android:paddingRight="@dimen/margines_main"
        android:paddingTop="@dimen/margines_main">

        <!--TextView for All Songs-->
        <TextView
            android:id="@+id/all_songs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/all_songs"
            android:textColor="@color/orangeText"
            android:textSize="@dimen/text_size_activities_title"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/thickness_lines"
            android:layout_height="match_parent"
            android:background="@color/redLines" />

        <View
            android:layout_width="@dimen/thickness_lines"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margines_between_lines"
            android:background="@color/redLines" />

        <!--TextView for Favorite Songs-->
        <TextView
            android:id="@+id/favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/favorite"
            android:textColor="@color/orangeText"
            android:textSize="@dimen/text_size_activities_title"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margines_main"
        android:layout_marginRight="@dimen/margines_main"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margines_main"
            android:layout_weight="1"
            android:orientation="vertical">

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/thickness_lines"
                android:background="@color/redLines" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/thickness_lines"
                android:layout_marginTop="@dimen/margines_between_lines"
                android:background="@color/redLines" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margines_main"
            android:layout_weight="1"
            android:orientation="vertical">

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/thickness_lines"
                android:background="@color/redLines" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/thickness_lines"
                android:layout_marginTop="@dimen/margines_between_lines"
                android:background="@color/redLines" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margines_between_lines"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margines_main">

        <!--TextView for Music bands/Singers-->
        <TextView
            android:id="@+id/music_bands_singers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/music_bands_singers"
            android:textColor="@color/orangeText"
            android:textSize="@dimen/text_size_activities_title"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/thickness_lines"
            android:layout_height="match_parent"
            android:background="@color/redLines" />

        <View
            android:layout_width="@dimen/thickness_lines"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margines_between_lines"
            android:background="@color/redLines" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margines_between_lines"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margines_main">

            <!--EditText for searching songs after titles-->
            <EditText
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/search_song"
                android:inputType="text"
                android:textColor="@color/orangeText"
                android:textColorHint="@color/orangeText"
                android:textSize="@dimen/text_size_activities_title"
                android:textStyle="italic"
                android:layout_marginLeft="@dimen/margines_main"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:drawableTop="@drawable/ic_search_red_24dp"
                android:onClick="findSong"
                android:layout_marginRight="@dimen/margines_main"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
